fixed overflowed region selection

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -113,6 +113,12 @@ textarea {
   min-width: unset;
 }
 
+.options-list-container.appearance-outline .options-list nb-option {
+  padding: 0.1rem 1.125rem;
+  line-height: 1.4rem;
+  font-weight: 400;
+}
+
 .circle {
   border-radius: 50%;
   width: 100px;
